# Bammi

./: AI.cpp  AI.h  Board.cpp  Board.h  CMakeLists.txt  CoutScreen.cpp  CoutScreen.h  CursesScreen.cpp  CursesScreen.h  README.md  Screen.cpp  Screen.h  main.cpp
src/: AI.cpp  AI.h  Board.cpp  Board.h  CoutScreen.cpp  CoutScreen.h  CursesScreen.cpp  Screen.cpp  Screen.h  main.cpp
